badminton page created

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/download.jpg">
     <title>Badminton League</title>
       <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      color: #ffffff;
+      color: #ededed;
     }
 
     nav {
@@ -44,8 +45,10 @@
     }
 
     h1 {
-      color: #535392;
+      color: #000000;
       margin-top: 30px;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      
     }
 
     p {
