--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Badminton League</title>
-    <link rel="icon" href="./img/download.jpg">
+    <link rel="icon" href="images/download.jpg">
     <link rel="stylesheet" href="index.css">
     <style>
         body {
