--- a/matchTracking.html
+++ b/matchTracking.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/download.jpg">
     <title>Badminton League</title>
 </head>
 <style>
@@ -15,7 +16,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
+      background-color: #999999;
     }
 
     nav {
@@ -36,7 +37,7 @@
     }
 
     nav ul li a {
-      color: white;
+      color: rgb(224, 224, 224);
       text-decoration: none;
       padding: 8px 16px;
       display: inline-block;
@@ -91,6 +92,7 @@
                 <td><input type="radio"  name="winner">win</td>
                 <td><input type="radio"  name="winner">loss</td>
              </tr>
+             <h2>Match Tracking</h2>
              <h3>Wins and Losses Percentage</h3>
              <tr>
                 <td>wins:</td><td><input type="number"></td>
