--- a/player.html
+++ b/player.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/download.jpg">
     <title>Badminton League</title>
 </head>
 <style>
@@ -16,7 +17,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
+      background-color: #f1d9d9;
+      
     }
 
     header {
